Rip out crap, still can't figure out how to start a monitor